--- a/SGA/TCC_DEFINITIVO/2cachorro.html
+++ b/SGA/TCC_DEFINITIVO/2cachorro.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,600,0,0" />
-    <title>Adoção cachorro</title>
+    <script src="janela.js" defer></script>
+
+    <title>Adoção</title>
 </head>
 
 <body>
@@ -72,7 +74,7 @@
                     <td style="padding: none; max-width: 150px; max-height: 70px;"> <img src="images/pc2.jpg"></td>
                 </tr>
                 <tr>
-                    <td style="padding: none; max-width: 150px; max-height: 70px;"> <img src="images/pc3.jpg"></td>
+                    <td style="padding: none; max-width: 150px; max-height: 70px;"> <img src="images/pc11.png"></td>
                     <td style="padding: none; max-width: 150px; max-height: 70px;"> <img src="images/pg3.jpg"></td>
                     <td style="padding: none; max-width: 150px; max-height: 70px;"> <img src="images/pp3.jpg"></td>
                 </tr>
@@ -82,11 +84,11 @@
 
     <nav>
         <ul class="nav-links">
-            <li class="link" style="padding-left: 30%;"><a href="2cachorro.html">Cachorrosr</a></li>
-            <li class="link"><a href="Animais/2gato.html">Gatos</a></li>
-            <li class="link"><a href="2cavalo.html">Cavalos</a></li>
-            <li class="link"><a href="2ave.html">Aves</a></li>
-            <li class="link"><a href="2coelho.html">Coelhos</a></li>
+            <li class="link" style="padding-left: 30%;"><a href="2cachorro.html">Cachorro</a></li>
+            <li class="link"><a href="2gato.html">Gato</a></li>
+            <li class="link"><a href="2cavalo.html">Cavalo</a></li>
+            <li class="link"><a href="2ave.html">Ave</a></li>
+            <li class="link"><a href="2coelho.html">Coelho</a></li>
             <li class="link"><a href="2diversos.html">Animais diversos</a></li>
             <div id="search-container">
                 <input type="text" id="search-box" placeholder="Digite aqui...">
@@ -99,24 +101,28 @@
 
                 // Resultados pré-registrados (pode ser obtido de uma API)
                 const resultadosPreRegistrados = [{
-                        nome: "Resultado 1",
+                        nome: "Cachorro",
                         url: "adocao.html"
                     },
                     {
-                        nome: "Resultado 2",
-                        url: "https://www.yahoo.com"
+                        nome: "Gato",
+                        url: "2gato.html"
                     },
                     {
-                        nome: "Resultado 3",
-                        url: "https://www.bing.com"
+                        nome: "Cavalo",
+                        url: "2cavalo.html"
                     },
                     {
-                        nome: "Resultado 4",
-                        url: "https://www.duckduckgo.com"
+                        nome: "Ave",
+                        url: "2ave.html"
                     },
                     {
-                        nome: "Resultado 5",
-                        url: "https://www.ask.com"
+                        nome: "Coelho",
+                        url: "2.coelho.html"
+                    },
+                    {
+                        nome: "Animais Diversos",
+                        url: "2diversos.html"
                     }
                 ];
 
