--- a/SGA/TCC_DEFINITIVO/quem_somos.html
+++ b/SGA/TCC_DEFINITIVO/quem_somos.html
@@ -109,8 +109,8 @@
 
 
 
-    <section class="bloco" style="background-color: transparent;">
-        <h1 style="color: white;">Quem Somos</h1>
+    <section class="bloc" style="background-color: transparent;">
+        <h1>Fundadores:</h1>
         <div class="pricing" style="grid-template-columns: repeat(3, 1fr);">
 
 
