--- a/SGA/TCC_DEFINITIVO/2coelho.html
+++ b/SGA/TCC_DEFINITIVO/2coelho.html
@@ -84,7 +84,7 @@
 
     <nav>
         <ul class="nav-links">
-            <li class="link" style="padding-left: 30%;"><a href="2cachorro.html">Cachorro</a></li>
+            <li class="link" style="padding-left: 30%;"><a href="adocao.html">Cachorro</a></li>
             <li class="link"><a href="2gato.html">Gato</a></li>
             <li class="link"><a href="2cavalo.html">Cavalo</a></li>
             <li class="link"><a href="2ave.html">Ave</a></li>
