--- a/SGA/TCC_DEFINITIVO/doacao.html
+++ b/SGA/TCC_DEFINITIVO/doacao.html
@@ -19,9 +19,8 @@
         </div>
         <ul class="nav-links">
             <li class="link"><a href="index.html">Home</a></li>
-            <li class="link"><a href="resgate.html">Resgate</a></li>
+            <li class="link"><a href="resgate.html">Notícias</a></li>
             <li class="link"><a href="adocao.html">Adoção</a></li>
-            <li class="link"><a href="apadrinhamento.html">Apadrinhamento</a></li>
             <li class="link"><a href="castracao.html">Castração</a></li>
             <li class="link"><a href="doacao.html">Doação</a></li>
             <li class="link"><a href="quem_somos.html">Quem Somos</a></li>
@@ -86,6 +85,7 @@
 
                 <p class="type">Plano Preventivo</p>
                 <p class="info">Vacina para imunização dos animais</p>
+                <p class="info">Remédios</p>
                 <br>
                 <br>
                 <br>
@@ -104,29 +104,15 @@
                 </div>
                 <section>
                     <div class="img-container">
-                        <img src="images/1.png" alt="Image">
-                        <div class="content">
-                            <p>
-                                Lili foi encontrada abandonada em um parque,
-                                assustada e desnutrida. Depois de ser resgatada e bem cuidada,
-                                ela se transformou em uma coelhinha saudável e curiosa.
-                            </p>
-                            <br>
-                            <p>
-                                Recem recuperada de gripe
-                            </p>
-                            <br>
-                            <p>Castrada</p>
+                        <img src="images/QR.png" alt="Image">
 
-                        </div>
 
                     </div>
                     <center>
-                        <p>Lua</p>
-                        <p>2 anos de idade</p>
-                        <p>sem raça definida</p>
+                        <p>Lucas</p>
+                        <p>PIX:</p>
+                        <p>(12) 98173-5603</p>
                     </center>
-                    <button href="2gato.html">Adodar</button>
             </div>
         </div>
 
