--- a/SGA/TCC_DEFINITIVO/index.html
+++ b/SGA/TCC_DEFINITIVO/index.html
@@ -302,6 +302,7 @@
 
                 <p class="type">Plano Preventivo</p>
                 <p class="info">Vacina para imunização dos animais</p>
+                <p class="info">Remédios</p>
                 <br>
                 <br>
                 <br>
